# MagiSysteme3

./: .gitignore  CLAUDE.md  magi-architecture.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/: code-review.md  doc-update.md  pair-programming.md
.kiro/specs/magi-system/: design.md  requirements.md  tasks.md
Skils/ux-psychology-Skils/: SKILL.md  concepts.csv  search.py  ux-psychology.skill
agentcore/: .bedrock_agentcore.yaml  backend.py  output.txt
agentcore/.bedrock_agentcore/backend/: Dockerfile
agentcore/agents/: base.py
docs/: 00_architecture_overview.md  01_strands_agents_tutorial.md  02_current_progress.md  03_code_snapshot.md
frontend/: Dockerfile  frontend.py  requirements.txt
